...
        android:layout_marginTop="612dp"
        android:text="Back to menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="268dp"
        android:layout_marginTop="100dp"
        android:text="Modify drink"
        app:layout_constraintLeft_toLeftOf="parent"
...
